--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+
     <!-- header-start -->
     <header>
         <div class="header-area ">
@@ -46,11 +47,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">Beranda</a></li>
-                                        <li><a href="#">Kategori <i class="ti-angle-down"></i></a>
+                                        <li><a href="kategori.html">Kategori</a>
                                         </li>
-                                        <li><a href="blog.html">Artikel<i class="ti-angle-down"></i></a>
+                                        <li><a href="blog.html">Artikel</a>
                                         </li>
-                                        <li><a href="#">Kontak Kami</a></li>
+                                        <li><a href="video.html">Video</a>
+                                        </li>
                                     </ul>
                                 </nav>
                             </div>
@@ -58,7 +60,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a href="#"> Dukung Kami</a>
+                                    <a href="#kuisiuner"> Dukung Kami</a>
                                 </div>
                             </div>
                         </div>
@@ -75,13 +77,14 @@
 
     <!--================Blog Area =================-->
     <section class="blog_area section-padding">
-        <div class="container container-1" style="margin-left: 25% !important; ">
+        <div class="container container-1">
             <div class="row">
                 <div class="col-md-8 ">
                     <div class="">
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/1.jfif" alt="">
+                                <a href="single-blog.html"> <img class="card-img rounded-0" src="img/blog/1.jpg"
+                                        alt=""></a>
                                 <a href="#" class="blog_item_date">
                                     <h3>22</h3>
                                     <p>Sep</p>
@@ -93,35 +96,16 @@
                                     <h2>Mengapa bahasa inggris menjadi bahasa internasional?</h2>
                                 </a>
                                 <p>berikut alasan mengapa bahasa inggris menjadi bahasa internasional</p>
-                            </div>
-                        </article>
-
-                        <article class="blog_item">
-                            <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/2.jpg" alt="">
-                                <a href="#" class="blog_item_date">
-                                    <h3>24</h3>
-                                    <p>Sep</p>
-                                </a>
                                 <ul class="blog-info-link">
                                     <li><a href="#"><i class="fa fa-user"></i> Artikel Bahasa</a></li>
                                 </ul>
                             </div>
-
-                            <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Bumi Bulat atau Datar?</h2>
-                                </a>
-                                <p>Banyak yang berdebat, bumi bulat ataukah datar, berikut penjelasan sainsnya</p>
-                                <ul class="blog-info-link">
-                                    <li><a href="#"><i class="fa fa-user"></i> Artikel Astronomi</a></li>
-                                </ul>
-                            </div>
                         </article>
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/3.jpg" alt="">
+                                <a href="inflasi.html"><img class="card-img rounded-0" src="img/blog/insflasi.jpg"
+                                        alt=""></a>
                                 <a href="#" class="blog_item_date">
                                     <h3>24</h3>
                                     <p>Sep</p>
@@ -129,13 +113,81 @@
                             </div>
 
                             <div class="blog_details">
-                                <a class="d-inline-block" href="single-blog.html">
-                                    <h2>Apakah ada kehidupan diluar bumi?</h2>
+                                <a class="d-inline-block" href="inflasi.html">
+                                    <h2>Apa itu insflasi? dan apa penyebabnya.</h2>
                                 </a>
-                                <p>Siapa disini yang suka dengan konspirasi alien, atau makhluk luar angkasa? berikut
-                                    penjelasannya</p>
+                                <p>Berikut artikel yang kan menjelaskan apa itu insflasi keungan, hingga faktor
+                                    penyebabnya</p>
                                 <ul class="blog-info-link">
-                                    <li><a href="#"><i class="fa fa-user"></i> Artikel Astronomi</a></li>
+                                    <li><a href="#"><i class="fa fa-user"></i> Artikel Ekonomi</a></li>
+                                </ul>
+                            </div>
+                        </article>
+
+                        <article class="blog_item">
+                            <div class="blog_item_img">
+                                <a href="magnet.html"><img class="card-img rounded-0" src="img/blog/magnet.jpg"
+                                        alt=""></a>
+                                <a href="#" class="blog_item_date">
+                                    <h3>24</h3>
+                                    <p>Sep</p>
+                                </a>
+                            </div>
+
+                            <div class="blog_details">
+                                <a class="d-inline-block" href="magnet.html">
+                                    <h2>Mengenal apa itu magnet dan fungsinya dalam kehidupan sehari hari.</h2>
+                                </a>
+                                <p>Udah tau belum asal usulnya magnet? berikut ini penjelasannya ya</p>
+                                <ul class="blog-info-link">
+                                    <li><a href="#"><i class="fa fa-user"></i> Artikel sains</a></li>
+
+                                </ul>
+                            </div>
+                        </article>
+
+                        <article class="blog_item">
+                            <div class="blog_item_img">
+                                <a href="4-tips-belajar.html"><img class="card-img rounded-0" src="img/blog/4 tips.jpg"
+                                        alt=""></a>
+                                <a href="#" class="blog_item_date">
+                                    <h3>24</h3>
+                                    <p>Sep</p>
+                                </a>
+                            </div>
+
+                            <div class="blog_details">
+                                <a class="d-inline-block" href="4-tips-belajar.html">
+                                    <h2>4 Tips agar belajar dirumah tidak membosankan</h2>
+                                </a>
+                                <p>apakah teman teman pernah merasakan bosan dalam belajar dirumah? berikut tips untuk
+                                    mengatasinya ya</p>
+                                <ul class="blog-info-link">
+                                    <li><a href="#"><i class="fa fa-user"></i> Artikel Produktifitas</a></li>
+
+                                </ul>
+                            </div>
+                        </article>
+
+                        <article class="blog_item">
+                            <div class="blog_item_img">
+                                <a href="ikigai.html"><img class="card-img rounded-0" src="img/blog/ikigai.jpg"
+                                        alt=""></a>
+                                <a href="#" class="blog_item_date">
+                                    <h3>24</h3>
+                                    <p>Sep</p>
+                                </a>
+                            </div>
+
+                            <div class="blog_details">
+                                <a class="d-inline-block" href="ikigai.html">
+                                    <h2>Mengenal Konsep "ikigai" yang membentuk hidup dan masa depan jadi lebih bahagia
+                                    </h2>
+                                </a>
+                                <p>Udah pernah denger konsep hidup yang namanya ikigai belum teman teman? berikut ini
+                                    rangkumannya ya</p>
+                                <ul class="blog-info-link">
+                                    <li><a href="#"><i class="fa fa-user"></i> Artikel Produktifitas</a></li>
 
                                 </ul>
                             </div>
