--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+
     <!-- header-start -->
     <header>
         <div class="header-area ">
@@ -46,11 +47,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">Beranda</a></li>
-                                        <li><a href="#">Kategori <i class="ti-angle-down"></i></a>
+                                        <li><a href="kategori.html">Kategori</a>
                                         </li>
-                                        <li><a href="blog.html">Artikel<i class="ti-angle-down"></i></a>
+                                        <li><a href="blog.html">Artikel</a>
                                         </li>
-                                        <li><a href="#l">Kontak Kami</a></li>
+                                        <li><a href="video.html">Video</a>
+                                        </li>
                                     </ul>
                                 </nav>
                             </div>
@@ -58,7 +60,7 @@
                         <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
-                                    <a href="#"> Dukung Kami</a>
+                                    <a href="#kuisiuner"> Dukung Kami</a>
                                 </div>
                             </div>
                         </div>
@@ -90,14 +92,16 @@
                     <div class="col-xl-10 offset-xl-1">
                         <div class="slider_text text-center">
                             <div class="text">
-                                <h3 style="font-size: 40px !important; margin-top: 50px !important;">
-                                    Literasix <br> Sebuah Portal Edukasi
-                                    Dan Pengembangan Diri Generasi Millenial Indonesia
+                                <h3 style="font-size: 50px !important; margin-top: 50px !important;">
+                                    Literasix
                                 </h3>
-                                <a class="boxed-btn3" href="#">Get Started</a>
+                                <h4 style="font-size: 30px !important; margin-top: -35px;">
+                                    Sebuah Portal Edukasi Dan Pengembangan Diri Generasi Millenial Indonesia
+                                </h4>
+                                <a class="boxed-btn3" style="margin-top: 50px;" href="#kategori_artikel">Get Started</a>
                             </div>
                             <div class="ilstrator_thumb">
-                                <img src="img/ANIMASI.png" alt="" style="">
+                                <img src="img/ANIMASI.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -109,15 +113,15 @@
 
 
     <!-- bradcam_area  -->
-    <div class="bradcam_area" style="">
+    <div class="bradcam_area">
         <div class=" bradcam_shap">
             <img src="img/ilstrator/bradcam_ils.png" alt="">
         </div>
-        <div class="container" style="margin-top: 100px;">
+        <div class="container" style="margin-top: 130px;">
             <div class="row">
                 <div class="col-xl-12">
-                    <div class="bradcam_text text-center">
-                        <h3>Kategori Artikel</h3>
+                    <div class="bradcam_text text-center" id="kategori_artikel">
+                        <h3 style="font-size: 40px;">Kategori Artikel</h3>
                     </div>
                 </div>
             </div>
@@ -133,7 +137,7 @@
         <div class="patrn_2 d-none d-lg-block">
             <img src="img/pattern/patrn.png" alt="">
         </div>
-        <div class="container">
+        <div class="container" style="margin-top: -50px;">
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="single_study text-center white_single_study">
@@ -142,7 +146,7 @@
                                 <img src="img/case_study/1.jpg" alt="">
                             </a>
                         </div>
-                        <div class="subheading white_subheading">
+                        <div class="subheading white_subheading kategori">
                             <h4><a href="blog.html">Artikel Sains</a></h4>
                         </div>
                     </div>
@@ -154,7 +158,7 @@
                                 <img src="img/case_study/2.jpg" alt="" width="626px">
                             </a>
                         </div>
-                        <div class="subheading white_subheading">
+                        <div class="subheading white_subheading kategori">
                             <h4><a href="blog.html">Artikel Bahasa</a></h4>
 
                         </div>
@@ -167,7 +171,7 @@
                                 <img src="img/case_study/3.jpg" alt="">
                             </a>
                         </div>
-                        <div class="subheading white_subheading">
+                        <div class="subheading white_subheading kategori">
                             <h4><a href="blog.html">Artikel Matematika</a></h4>
 
                         </div>
@@ -180,7 +184,7 @@
                                 <img src="img/case_study/4.jpg" alt="">
                             </a>
                         </div>
-                        <div class="subheading white_subheading">
+                        <div class="subheading white_subheading kategori">
                             <h4><a href="blog.html">Artikel Astronomi</a></h4>
 
                         </div>
@@ -193,7 +197,7 @@
                                 <img src="img/case_study/5.jpg" alt="">
                             </a>
                         </div>
-                        <div class="subheading white_subheading">
+                        <div class="subheading white_subheading kategori">
                             <h4><a href="blog.html">Artikel Ekonomi</a></h4>
 
                         </div>
@@ -206,7 +210,7 @@
                                 <img src="img/case_study/6.jpg" alt="">
                             </a>
                         </div>
-                        <div class="subheading white_subheading">
+                        <div class="subheading white_subheading kategori">
                             <h4><a href="blog.html">Artikel Produktifitas</a></h4>
 
                         </div>
@@ -215,8 +219,10 @@
             </div>
             <div class="row">
                 <div class="col-xl-12">
-                    <div class="load_more text-center">
-                        <a class="load_more_btn" href="#">Load More</a>
+                    <div class="load_more text-center" id="kuisiuner">
+                        <a class="load_more_btn" href="https://chat-forms.com/forms/1601929757916-fbv/index.html"
+                            target="_blank">Bantu
+                            Kami Mengevaluasi Situs Literasix</a>
                     </div>
                 </div>
             </div>
