--- a/single-blog.html
+++ b/single-blog.html
@@ -46,11 +46,12 @@
                         <nav>
                            <ul id="navigation">
                               <li><a href="index.html">Beranda</a></li>
-                              <li><a href="#">Kategori <i class="ti-angle-down"></i></a>
+                              <li><a href="kategori.html">Kategori</a>
                               </li>
-                              <li><a href="blog.html">Artikel<i class="ti-angle-down"></i></a>
+                              <li><a href="blog.html">Artikel</a>
                               </li>
-                              <li><a href="#">Kontak Kami</a></li>
+                              <li><a href="video.html">Video</a>
+                              </li>
                            </ul>
                         </nav>
                      </div>
@@ -58,7 +59,7 @@
                   <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                      <div class="Appointment">
                         <div class="book_btn d-none d-lg-block">
-                           <a href="#"> Dukung Kami</a>
+                           <a href="#kuisiuner"> Dukung Kami</a>
                         </div>
                      </div>
                   </div>
@@ -73,9 +74,32 @@
    </header>
    <!-- header-end -->
 
-   <!--================Blog Area =================-->
-   <section class="blog_area single-post-area section-padding" style="margin-left: 25% !important;">
+   <!-- ============= Pojok Inspirasi =================== -->
+
+   <section class="blog_area single-post-area section-padding">
       <div class="container">
+         <div class="row">
+            <div class="col-lg-8 posts-list">
+               <div class="single-post">
+                  <div class="feature-img">
+                     <img class="img-fluid" src="img/blog/single_blog_1.png" alt="">
+                  </div>
+                  <div class="blog_details">
+                     <img src="img/pojokinspirasi/Pojok inspirasi 1.jpg" alt="">
+                  </div>
+               </div>
+               <div class="navigation-top">
+                  <div class="d-sm-flex justify-content-between text-center">
+
+                     <div class="col-sm-4 text-center my-2 my-sm-0">
+                        <!-- <p class="comment-count"><span class="align-middle"><i class="fa fa-comment"></i></span> 06 Comments</p> -->
+                     </div>
+                  </div>
+   </section>
+
+   <!--================Blog Area =================-->
+   <section class="blog_area single-post-area section-padding">
+      <div class="container" style="margin-top: -250px;">
          <div class="row">
             <div class="col-lg-8 posts-list">
                <div class="single-post">
